# Sinapsis-MCPs

./: .gitignore  LICENSE  README.md
google-calendar/: README.md  auth_calendar.py  auth_setup.py  helpers.py  mcp_google_calendar.py  prompts.py  resources.py  server.py
google-calendar/tools/: busqueda.py  calendarios.py  eventos.py  personalizacion.py  recurrentes.py
notion/: README.md  pyproject.toml
notion/src/: __init__.py  constants.py  server.py
notion/src/config/: __init__.py  settings.py
notion/src/core/: __init__.py  database.py  page.py  search.py
notion/src/utils/: __init__.py  formatters.py  validators.py
obsidian/: README.md  helpers.py  mcp_obsidian.py  prompts.py  resources.py  server.py
obsidian/tools/: busqueda.py  carpetas.py  notas.py
sentinel-system/: README.md  mcp_sentinel_system.py
sentinel-system/src/: __init__.py  constants.py  pyproject.toml  server.py
sentinel-system/src/config/: __init__.py  settings.py
sentinel-system/src/core/: __init__.py  guardian.py  hardware.py  health.py  logs.py  network.py  performance.py  processes.py
sentinel-system/src/utils/: __init__.py  formatters.py  helpers.py
sentinel-system/tools/: guardian.py  hardware.py  health.py  logs.py  network.py  performance.py  processes.py
telegram/: README.md  helpers.py  mcp_telegram.py  prompts.py  resources.py  server.py
telegram/tools/: __init__.py  notificaciones.py  resumen.py
