[project]
name = "notion-mcp"
version = "2.0.0"
description = "Servidor MCP para integración con Notion API"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "TFG Portal MCP Sinapsis" }
]
keywords = ["mcp", "notion", "api", "integration"]

dependencies = [
    "mcp>=0.1.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src", "src.config", "src.core", "src.utils"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true