[project]
name = "system-sentinel-mcp"
version = "2.0.0"
description = "Servidor MCP para monitorización y diagnóstico del sistema Linux"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "TFG Portal MCP Sinapsis" }
]
keywords = ["mcp", "system-monitoring", "linux", "diagnostics", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: System :: Monitoring",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp>=0.1.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}
packages = ["src", "src.config", "src.core", "src.utils"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[project.scripts]
sentinel-mcp = "src.server:main"